# WCPrivateer

./: CMakeLists.txt  README.md
.github/workflows/: continuous_integration.yml
Libraries/ZVulkan/: CMakeLists.txt
Libraries/ZWidget/: CMakeLists.txt
Libraries/ZWidget/include/zwidget/core/: widget.h
Libraries/ZWidget/include/zwidget/window/: window.h
Libraries/ZWidget/src/core/: widget.cpp
Libraries/ZWidget/src/window/sdl2/: sdl2_display_window.cpp  sdl2_display_window.h
Libraries/ZWidget/src/window/wayland/: wayland_display_window.cpp  wayland_display_window.h
Libraries/ZWidget/src/window/win32/: win32_display_window.cpp  win32_display_window.h
Libraries/ZWidget/src/window/x11/: x11_display_window.cpp  x11_display_window.h
Libraries/lzw/: lzw.c  lzw.h
Sources/: MainGame.cpp  MainTool.cpp  Precomp.h
Sources/Audio/: AudioSource.cpp  AudioSource.h
Sources/Commandlet/: Commandlet.cpp  Commandlet.h  ExportCommandlet.cpp  ExportCommandlet.h  QuitCommandlet.cpp  QuitCommandlet.h
Sources/FileFormat/: FileEntryReader.h  WCArchive.cpp  WCArchive.h  WCCockpit.cpp  WCCockpit.h  WCConversation.cpp  WCConversation.h  WCGameData.cpp  WCGameData.h  WCImage.cpp  WCImage.h  WCMovie.cpp  WCMovie.h  WCMusic.cpp  WCMusic.h  WCPak.cpp  WCPak.h  WCPalette.cpp  WCPalette.h  WCScene.cpp  WCScene.h  WCSector.cpp  WCSector.h  WCSound.cpp  WCSound.h  WCSpace.cpp  WCSpace.h  WCTypes.cpp  WCTypes.h
Sources/Game/: GameApp.cpp  GameApp.h  RenderDevice.cpp  RenderDevice.h
Sources/Game/GameObjects/: GameObject.cpp  GameObject.h
Sources/Game/Screens/: AutopilotScreen.cpp  AutopilotScreen.h  BarScreen.cpp  BarScreen.h  BaseScreen.cpp  BaseScreen.h  CockpitScreen.cpp  CockpitScreen.h  ConversationScreen.cpp  ConversationScreen.h  GameScreen.cpp  GameScreen.h  HangarScreen.cpp  HangarScreen.h  IntroScreen.cpp  IntroScreen.h  JoystickScreen.cpp  JoystickScreen.h  LandingScreen.cpp  LandingScreen.h  LoadSaveScreen.cpp  LoadSaveScreen.h  MainMenuScreen.cpp  MainMenuScreen.h  MercenaryScreen.cpp  MercenaryScreen.h  MerchantScreen.cpp  MerchantScreen.h  MissionComputerScreen.cpp  MissionComputerScreen.h  NavScreen.cpp  NavScreen.h  OptionsScreen.cpp  OptionsScreen.h  ShipDealerScreen.cpp  ShipDealerScreen.h  ShipGarageScreen.cpp  ShipGarageScreen.h  ShipSoftwareScreen.cpp  ShipSoftwareScreen.h  (+4 more)
Sources/Game/Screens/Movie/: IntroScreen.cpp  IntroScreen.h  JumpScreen.cpp  JumpScreen.h  LandingScreen.cpp  LandingScreen.h  MovieScreen.cpp  MovieScreen.h  TakeoffScreen.cpp  TakeoffScreen.h  VictoryScreen.cpp  VictoryScreen.h
Sources/Game/Screens/Scene/: BarScreen.cpp  BarScreen.h  BaseScreen.cpp  BaseScreen.h  HangarScreen.cpp  HangarScreen.h  MercenaryComputerScreen.cpp  MercenaryComputerScreen.h  MercenaryScreen.cpp  MercenaryScreen.h  MerchantComputerScreen.cpp  MerchantComputerScreen.h  MerchantScreen.cpp  MerchantScreen.h  MissionComputerScreen.cpp  MissionComputerScreen.h  SceneScreen.cpp  SceneScreen.h  ShipDealerScreen.cpp  ShipDealerScreen.h  ShipGarageScreen.cpp  ShipGarageScreen.h  ShipSoftwareScreen.cpp  ShipSoftwareScreen.h  TradeScreen.cpp  TradeScreen.h
Sources/Game/Vulkan/: VulkanRenderDevice.cpp  VulkanRenderDevice.h
Sources/Tool/: ToolApp.cpp  ToolApp.h
